--- a/src/components/Button/styles.less
+++ b/src/components/Button/styles.less
@@ -6,13 +6,15 @@
 @red-600: #e53935;
 
 .orion_button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   outline: none;
-  min-width: 60px;
+  min-width: 15px;
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
-  display: inline-block;
   height: 40px;
   line-height: 40px;
   padding: 0 14px;
