--- a/src/components/Navbar/styles.less
+++ b/src/components/Navbar/styles.less
@@ -1,7 +1,7 @@
 .os_navbar {
+  position: fixed;
   background-color: #eee;
   box-shadow: 0px 0px 4px #888888;
-  position: fixed;
   height: 60px;
   top: 0;
   left: 0;
@@ -11,8 +11,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media print {
+    display: none;
+  }
 }
 
+.os_navbar_margin {
+  height: 80px;
+  @media print {
+    display: none;
+  }
+}
 
 .os_navbar-logo {
   height: 44px;
