--- a/src/components/fields/Toggle/styles.less
+++ b/src/components/fields/Toggle/styles.less
@@ -1,9 +1,16 @@
+.os_toggle_container {
+  margin-top: 7px;
+}
+
 .os_toggle_label {
   display: inline-block;
   cursor: pointer;
   position: relative;
   top: -9px;
   margin-left: 10px;
+  color: #464646;
+  font-size: 18px;
+  user-select: none;
 }
 
 .react-ios-switch-Switch-handle {
