--- a/src/components/Button/styles.less
+++ b/src/components/Button/styles.less
@@ -5,6 +5,13 @@
 @red-500: #f44336;
 @red-600: #e53935;
 
+.os_buttonLink {
+  WebkitTapHighlightColor: rgba(0, 0, 0, 0);
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 .orion_button {
   display: inline-flex;
   align-items: center;
