--- a/src/components/Navbar/styles.less
+++ b/src/components/Navbar/styles.less
@@ -1,26 +1,30 @@
 .os_navbar {
   position: fixed;
-  background-color: #eee;
-  box-shadow: 0px 0px 4px #888888;
+  background-color: #fff;
+  border-bottom: 1px solid #e4e4e4;
   height: 60px;
   top: 0;
   left: 0;
   right: 0;
-  color: #fff;
   z-index: 200;
   display: flex;
   align-items: center;
   justify-content: center;
+}
 
-  @media print {
+@media print {
+  .os_navbar {
     display: none;
   }
 }
 
 .os_navbar_margin {
   height: 80px;
-  @media print {
-    display: none;
+}
+
+@media print {
+  .os_navbar_margin {
+      display: none;
   }
 }
 
