--- a/src/components/IconButton/styles.less
+++ b/src/components/IconButton/styles.less
@@ -1,5 +1,7 @@
 .os_iconButton {
   color: #131313;
+  cursor: pointer;
+  position: relative;
 
   :hover {
     color: #2b2b2b;
@@ -8,4 +10,16 @@
   :active {
     color: #636363;
   }
+}
+
+.os_iconButton_loading {
+  position: relative;
+  cursor: default;
+  color: #989898;
+}
+
+.os_iconButton_disabled {
+  position: relative;
+  cursor: default;
+  color: #989898;
 }
