--- a/src/components/fields/Select/select.less
+++ b/src/components/fields/Select/select.less
@@ -360,6 +360,7 @@
 .Select--multi.is-disabled .Select-value-icon:active {
   background-color: #fcfcfc;
 }
+/*
 @keyframes Select-animation-spin {
   to {
     transform: rotate(1turn);
@@ -370,3 +371,4 @@
     -webkit-transform: rotate(1turn);
   }
 }
+*/
