--- a/src/components/Button/styles.less
+++ b/src/components/Button/styles.less
@@ -38,6 +38,14 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.os_button_container {
+  margin-right: 10px;
+}
+
+.os_button_container:last-child {
+  margin-right: auto;
+}
+
 .orion_button * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
