mejoras get query param

--- a/src/components/fields/Select/less/control.import.less
+++ b/src/components/fields/Select/less/control.import.less
@@ -46,7 +46,7 @@
 
 .Select-control {
 	background-color: @select-input-bg;
-	border: 1px solid #dfdfdf;
+	border: 1px solid #c2c2c2;
 	// box-shadow: 0 0 0 0.5px rgba(49,49,93,.03), 0 2px 5px 0 rgba(49,49,93,.1), 0 1px 2px 0 rgba(0,0,0,.08);
 	border-radius: 4px;
 	color: @select-text-color;
