text area auto resize

--- a/src/components/fields/Text/styles.less
+++ b/src/components/fields/Text/styles.less
@@ -18,7 +18,7 @@
   border-radius: 4px;
   padding: 10px;
   outline: none;
-  transition: all 0.2s ease;
+  transition: border 0.2s ease;
   box-shadow: 0 0 0 1px rgba(220, 220, 220, 0.2);
   &:focus {
     border: 1px solid #0069ff;
