--- a/src/components/Navigator/styles.less
+++ b/src/components/Navigator/styles.less
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   color: #fff;
+  transition: all 0.2s ease;
 }
 
 .os-navigator-shadow {
@@ -45,7 +46,6 @@
 .os-navigator-item {
   display: inline-flex;
   align-items: center;
-  border-bottom: transparent 1px solid;
   margin-right: 30px;
 }
 
@@ -56,6 +56,8 @@
   color: #fff;
   font-family: 'Geomanist', 'Open Sans', sans-serif;
   font-size: 20px;
+  border-bottom: transparent 2px solid;
+  box-sizing: border-box;
 }
 
 .os-navigator-item:last-child::after {
