--- a/src/components/Tabs/styles.less
+++ b/src/components/Tabs/styles.less
@@ -1,28 +1,74 @@
-@active-color: #2196f3;
-@normal-color: #949494;
-@margin-right: 20px;
-@font-size: 18px;
-
-.os-tab-container {
-  padding: 12px 0;
+.os-tabs-container {
+  /* box-shadow: 0 18px 35px rgba(50, 50, 93, 0.1), 0 8px 15px rgba(0, 0, 0, 0.07); */
+  height: 45px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
 
-.os-tab-item {
-  font-size: @font-size;
-  margin-right: @margin-right;
-  padding: 10px 0;
-  color: @normal-color;
-
-  &:hover {
-    border-bottom: 1px solid lighten(@normal-color, 30%);
-  }
+.os-tabs-inner {
+  flex: 1;
+  display: flex;
+  padding: 0px 20px;
+  width: 100%;
+  max-width: 1200px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  white-space: nowrap;
+  margin: 0 -20px;
+  box-sizing: content-box;
 }
 
-.os-tab-item-active {
-  font-size: @font-size;
-  margin-right: @margin-right;
-  padding: 10px 0;
+.os-tabs-inner-small {
+  box-sizing: border-box;
+  margin: 0;
+}
 
-  color: @active-color;
-  border-bottom: 1px solid @active-color;
+.os-tabs-icon {
+  position: absolute;
+  height: 45px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #949494;
+  transition: all 0.2s ease;
+}
+
+.os-tabs-shadow {
+  float: left;
+  height: 45px;
+  width: 30px;
+  position: absolute;
+}
+
+.os-tabs-item {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.os-tabs-item a {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  color: #949494;
+  font-size: 18px;
+  border-bottom: transparent 1px solid;
+  box-sizing: border-box;
+}
+
+.os-tabs-item:last-child::after {
+  width: 20px;
+  content: '';
+}
+
+.os-tabs-item:not(.os-tabs-itemActive) a:hover {
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.os-tabs-itemActive a {
+  color: #0069ff;
+  border-bottom: 1px solid #0069ff;
 }
