--- a/src/components/fields/Select/styles.less
+++ b/src/components/fields/Select/styles.less
@@ -3,6 +3,10 @@
   margin-bottom: 10px !important;
 }
 
+.orion-select__placeholder {
+  color: #aaa !important;
+}
+
 .orion-select__control--is-focused {
   border-color: #0069ff !important;
   box-shadow: 0 0 0 1px #0069ff !important;
