--- a/src/components/Tabs/styles.less
+++ b/src/components/Tabs/styles.less
@@ -17,7 +17,7 @@
   -webkit-overflow-scrolling: touch;
   white-space: nowrap;
   margin: 0 -20px;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 .os-tabs-inner-small {
